# sfwt

./: .gitignore  CMakeLists.txt  Calculations.cpp  Chunk  Chunk.cpp  Chunk.h  Ellipse.cpp  Ellipse.h  Makefile  Material.h  Organ.h  PlanetGeneration.cpp  PlanetGeneration.h  README.md  Tile.h  main.cpp
Resources/Data/Materials/: Dirt.yaml
include/: Chunk.h  Ellipse.h  Organ.h  PlanetGeneration.h
src/: Animal.h  Calculations.cpp  Calculations.h  Chunk.cpp  Chunk.h  Colour.cpp  Colour.h  Coordinates.cpp  Coordinates.h  Ellipse.cpp  Ellipse.h  Entity.cpp  Entity.h  Lifeform.h  Material.cpp  Material.h  Organ.h  PlanetGeneration.cpp  PlanetGeneration.h  Renderer.cpp  Renderer.h  Tile.h  Vector.cpp  Vector.h  main.cpp
